fixed docker files and add debezium initialize